--- a/compiled-templates/modules/insights/insights.tpl.html
+++ b/compiled-templates/modules/insights/insights.tpl.html
@@ -1,11 +1,11 @@
 <div class="insights-container">
   <div class="left-navbar">
-    <a ng-class="{ active: activeTab.name == 'earnings' }" ng-model="activeTab.name" btn-radio="'earnings'" class="left-nav-link">Earnings<i class="fa fa-caret-right"></i></a>
-    <a ng-class="{ active: activeTab.name == 'payments' }" ng-model="activeTab.name" btn-radio="'payments'" class="left-nav-link">Payments<i class="fa fa-caret-right"></i></a>
-    <a ng-class="{ active: activeTab.name == 'referalls' }" ng-model="activeTab.name" btn-radio="'referalls'" class="left-nav-link">Referrals<i class="fa fa-caret-right"></i></a>
+    <a data-ng-class="{ active: activeTab.name == 'earnings' }" data-ng-model="activeTab.name" btn-radio="'earnings'" class="left-nav-link">Earnings<i class="fa fa-caret-right"></i></a>
+    <a data-ng-class="{ active: activeTab.name == 'payments' }" data-ng-model="activeTab.name" btn-radio="'payments'" class="left-nav-link">Payments<i class="fa fa-caret-right"></i></a>
+    <a data-ng-class="{ active: activeTab.name == 'referalls' }" data-ng-model="activeTab.name" btn-radio="'referalls'" class="left-nav-link">Referrals<i class="fa fa-caret-right"></i></a>
   </div>
   <div class="tab-content">
-    <div ng-show="activeTab.name == 'earnings'" class="charts-container">
+    <div data-ng-show="activeTab.name == 'earnings'" class="charts-container">
       <div class="row numbers">
         <div class="col-sm-3 col-xs-6">
           <div class="number">$10.55</div>
@@ -29,21 +29,21 @@
       yAxisTickFormat="yAxisTickFormatFunction()" xAxisTickValues="xTickValues" yAxisTickValues="yTickValues" xAxisShowMaxMin="true">
         <div class="controls">
           <div class="earnings-type-switch">
-            <div ng-class="{ active: controls.type == 'all' }" ng-click=" controls.type = 'all' " class="all-earnings type-option">All Earnings</div>
-            <div ng-class="{ active: controls.type == 'social' }" ng-click=" controls.type = 'social' " class="social-earnings type-option">Social Earnings</div>
+            <div data-ng-class="{ active: controls.type == 'all' }" data-ng-click=" controls.type = 'all' " class="all-earnings type-option">All Earnings</div>
+            <div data-ng-class="{ active: controls.type == 'social' }" data-ng-click=" controls.type = 'social' " class="social-earnings type-option">Social Earnings</div>
           </div>
           <div class="selector date-selector">
             <div class="selected">
-              Last <span ng-bind="controls.date">{{controls.date}}</span> Days
+              Last <span data-ng-bind="controls.date">{{controls.date}}</span> Days
             </div>
             <div class="selection">
-              <div ng-class="{ active: controls.date == '3' }" ng-click=" controls.date = '3' ">
+              <div data-ng-class="{ active: controls.date == '3' }" data-ng-click=" controls.date = '3' ">
                 Last 3 Days
               </div>
-              <div ng-class="{ active: controls.date == '7' }" ng-click=" controls.date = '7' ">
+              <div data-ng-class="{ active: controls.date == '7' }" data-ng-click=" controls.date = '7' ">
                 Last 7 Days
               </div>
-              <div ng-class="{ active: controls.date == '30' }" ng-click=" controls.date = '30' ">
+              <div data-ng-class="{ active: controls.date == '30' }" data-ng-click=" controls.date = '30' ">
                 Last 30 days
               </div>
             </div>
@@ -54,11 +54,11 @@
       </div>
       <div class="series-selector">
         {{#forEach 'series' in data.earningsData}}
-          <div ng-repeat="series in data.earningsData" class="series-container">
+          <div data-ng-repeat="series in data.earningsData" class="series-container">
 
-            <div ng-class="{inactive: series.disabled}" ng-click="toggleSeries(series)">
-              <div class="series-color" style="background-color: <span ng-bind=" series.color ">{{series.color}}</span>" ng-attr-style="background-color: &#123;&#123;series.color&#125;&#125;"></div>
-              <div class="series-name"><span ng-bind="series.key">{{series.key}}</span>
+            <div data-ng-class="{inactive: series.disabled}" data-ng-click="toggleSeries(series)">
+              <div class="series-color" style="background-color: {{series.color}}" data-ng-attr-style="background-color: &#123;&#123;series.color&#125;&#125;"></div>
+              <div class="series-name"><span data-ng-bind="series.key">{{series.key}}</span>
               </div>
             </div>
           </div>
@@ -69,16 +69,16 @@
         <span class="text">Best Performers</span>
         <div class="selector date-selector">
         <div class="selected">
-          Last <span ng-bind="controls.date">{{controls.date}}</span> Days
+          Last <span data-ng-bind="controls.date">{{controls.date}}</span> Days
         </div>
         <div class="selection">
-          <div ng-class="{ active: controls.date == '3' }" ng-click=" controls.date = '3' ">
+          <div data-ng-class="{ active: controls.date == '3' }" data-ng-click=" controls.date = '3' ">
               Last 3 Days
           </div>
-          <div ng-class="{ active: controls.date == '7' }" ng-click=" controls.date = '7' ">
+          <div data-ng-class="{ active: controls.date == '7' }" data-ng-click=" controls.date = '7' ">
               Last 7 Days
           </div>
-          <div ng-class="{ active: controls.date == '30' }" ng-click=" controls.date = '30' ">
+          <div data-ng-class="{ active: controls.date == '30' }" data-ng-click=" controls.date = '30' ">
               Last 30 days
           </div>
         </div>
@@ -110,33 +110,33 @@
         <div class="col-sm-6">
           <h4>Top Brands</h4>
           <ul class="list-unstyled">
-            <li class="top-list-item" ng-repeat="brand in data.best.brands|orderBy: '-y'">
-              <a href="<span ng-bind=" brand.url ">{{brand.url}}</span>" target="_blank">
-                <span class="name"><span ng-bind="brand.key">{{brand.key}}</span></span>
+            <li class="top-list-item" data-ng-repeat="brand in data.best.brands|orderBy: '-y'">
+              <a href="<span data-ng-bind=" brand.url ">{{brand.url}}</span>" target="_blank">
+                <span class="name"><span data-ng-bind="brand.key">{{brand.key}}</span></span>
               </a>
-              <span class="value">$<span ng-bind="brand.y">{{brand.y}}</span></span>
+              <span class="value">$<span data-ng-bind="brand.y">{{brand.y}}</span></span>
             </li>
           </ul>
         </div>
         <div class="col-sm-6">
           <h4>Top Retailers</h4>
           <ul class="list-unstyled">
-            <li class="top-list-item" ng-repeat="retailer in data.best.retailers|orderBy: '-y'">
-              <a href="<span ng-bind=" retailer.url ">{{retailer.url}}</span>" target="_blank">
-                <span class="name"><span ng-bind="retailer.key">{{retailer.key}}</span></span>
+            <li class="top-list-item" data-ng-repeat="retailer in data.best.retailers|orderBy: '-y'">
+              <a href="<span data-ng-bind=" retailer.url ">{{retailer.url}}</span>" target="_blank">
+                <span class="name"><span data-ng-bind="retailer.key">{{retailer.key}}</span></span>
               </a>
-              <span class="value">$<span ng-bind="retailer.y">{{retailer.y}}</span></span>
+              <span class="value">$<span data-ng-bind="retailer.y">{{retailer.y}}</span></span>
             </li>
           </ul>
         </div>
       </div>
     </div>
 
-    <div ng-show="activeTab.name == 'payments'" class="payments-container">
+    <div data-ng-show="activeTab.name == 'payments'" class="payments-container">
       <div class="padded">TODO...</div>
     </div>
 
-    <div ng-show="activeTab.name == 'referalls'" class="referalls-container">
+    <div data-ng-show="activeTab.name == 'referalls'" class="referalls-container">
       <div class="padded">TODO...</div>
     </div>
   </div>
