--- a/compiled-templates/modules/ribbon/ribbon.tpl.html
+++ b/compiled-templates/modules/ribbon/ribbon.tpl.html
@@ -1,8 +1,8 @@
-<div class="shopsense-search-container" ng-show="showSearch" ng-class="{ active: showSearch, 'not-active': !showSearch }" ng-controller="SearchCtrl" ng-include="'modules/search/search.tpl.html'">
+<div class="shopsense-search-container" data-ng-show="showSearch" data-ng-class="{ active: showSearch, 'not-active': !showSearch }" data-ng-controller="SearchCtrl" data-ng-include="'modules/search/search.tpl.html'">
   {{> modules/search/search}}</div>
-<div class="ribbon-content-container" ng-include="'templates/main-tab-content.tpl.html'"></div>
+<div class="ribbon-content-container" data-ng-include="'templates/main-tab-content.tpl.html'"></div>
 
-<div class="ribbon-body" ng-class="{ 'on-shopstyle': onShopstyle, 'no-product-found': !findLink.productOnPage }">
+<div class="ribbon-body" data-ng-class="{ 'on-shopstyle': onShopstyle, 'no-product-found': !findLink.productOnPage }">
 
   <a target="_blank" href="http://proto.shopsense.s3-website-us-west-2.amazonaws.com/">
     <img class="shopsense-logo" src="https://shopsense.shopstyle.com/7b280/im/shopsense/logo.png">
@@ -10,32 +10,31 @@
 
   <div class="btn-group ribbon-options">
     {{#unless onShopstyle}}
-      <a ng-if="!onShopstyle" ng-class="{ active: openTab.name == 'link' }" ng-click="openTab.name = openTab.name == 'link' ? null : 'link'" class="btn link-btn">
+      <a data-ng-if="!onShopstyle" data-ng-class="{ active: openTab.name == 'link' }" data-ng-click="openTab.name = openTab.name == 'link' ? null : 'link'" class="btn link-btn">
 
-        <img ng-show="findLink.productOnPage" class="get-link-img" ng-src="<span ng-bind="findLink.productOnPage.image.sizes.Small.url">{{findLink.productOnPage.image.sizes.Small.url}}</span>" ng-attr-ng-src="&#123;&#123;findLink.productOnPage.image.sizes.Small.url&#125;&#125;">
-        <input ng-keypress="$event.preventDefault()" ng-click="selectTarget($event)" ng-show="findLink.productOnPage" class="get-link-input" value="<span ng-bind="findLink.productOnPage.clickUrl">{{findLink.productOnPage.clickUrl}}</span>">
-        <i ng-show="!findLink.productOnPage" class="fa fa-link"></i>
-        
-          Product Link
-        
+        <img data-ng-show="findLink.productOnPage" class="get-link-img" data-ng-src="&#123;&#123;findLink.productOnPage.image.sizes.Small.url&#125;&#125;" src="ng-src">
+        <input data-ng-keypress="$event.preventDefault()" data-ng-click="selectTarget($event)" data-ng-show="findLink.productOnPage" class="get-link-input" value="{{findLink.productOnPage.clickUrl}}" data-ng-attr-value="&#123;&#123;findLink.productOnPage.clickUrl&#125;&#125;">
+        <i data-ng-show="!findLink.productOnPage" class="fa fa-link"></i>
+        Product Link
+
       </a>
     {{/unless}}
 
-    <a ng-class="{ active: openTab.name == 'account' }" ng-click="openTab.name = openTab.name == 'account' ? null : 'account'" class="btn"><i class="fa fa-user"></i> Account</a>
-    <a ng-class="{ active: openTab.name == 'insights' }" ng-click="openTab.name = openTab.name == 'insights' ? null : 'insights'" class="btn"><i class="fa fa-bar-chart-o"></i> Insights</a>
+    <a data-ng-class="{ active: openTab.name == 'account' }" data-ng-click="openTab.name = openTab.name == 'account' ? null : 'account'" class="btn"><i class="fa fa-user"></i> Account</a>
+    <a data-ng-class="{ active: openTab.name == 'insights' }" data-ng-click="openTab.name = openTab.name == 'insights' ? null : 'insights'" class="btn"><i class="fa fa-bar-chart-o"></i> Insights</a>
 
-    <a ng-if="!onShopstyle" ng-class="{ active: openTab.name == 'search' }" ng-click="openTab.name = openTab.name == 'search' ? null : 'search'" class="btn"><i class="fa fa-search"></i> Search</a>
+    <a data-ng-if="!onShopstyle" data-ng-class="{ active: openTab.name == 'search' }" data-ng-click="openTab.name = openTab.name == 'search' ? null : 'search'" class="btn"><i class="fa fa-search"></i> Search</a>
 
-    <a ng-class="{ active: openTab.name == 'tag' }" ng-click="openTab.name = openTab.name == 'tag' ? null : 'tag'" class="btn"><i class="fa fa-circle-o"></i> Tag Photo</a>
-    <a ng-class="{ active: openTab.name == 'tools' }" ng-click="openTab.name = openTab.name == 'tools' ? null : 'tools'" class="btn"><i class="fa fa-th"></i> Widget</a>
-    <a ng-class="{ active: openTab.name == 'post' }" ng-click="openTab.name = openTab.name == 'post' ? null : 'post'" class="btn"><i class="fa fa-plus"></i> Post</a>
+    <a data-ng-class="{ active: openTab.name == 'tag' }" data-ng-click="openTab.name = openTab.name == 'tag' ? null : 'tag'" class="btn"><i class="fa fa-circle-o"></i> Tag Photo</a>
+    <a data-ng-class="{ active: openTab.name == 'tools' }" data-ng-click="openTab.name = openTab.name == 'tools' ? null : 'tools'" class="btn"><i class="fa fa-th"></i> Widget</a>
+    <a data-ng-class="{ active: openTab.name == 'post' }" data-ng-click="openTab.name = openTab.name == 'post' ? null : 'post'" class="btn"><i class="fa fa-plus"></i> Post</a>
   </div>
 
   <span class="selected-products-container">
-      <a ng-show="selectedProducts.length" class="btn fa fa-times clear-selected-products-button" ng-click="utils.clear(selectedProducts)"></a>
+      <a data-ng-show="selectedProducts.length" class="btn fa fa-times clear-selected-products-button" data-ng-click="utils.clear(selectedProducts)"></a>
       <span class="selected-products">
         {{#forEach 'product' in selectedProducts}}
-<a ng-click="utils.remove(selectedProducts, product)" ng-repeat="product in selectedProducts" class="selected-product" ng-style="{ 'background-image': 'url(' + product.image.sizes.Small.url + ')' }">
+<a data-ng-click="utils.remove(selectedProducts, product)" data-ng-repeat="product in selectedProducts" class="selected-product" data-ng-style="{ 'background-image': 'url(' + product.image.sizes.Small.url + ')' }">
 </a>
 {{/forEach}}
 
@@ -43,6 +42,6 @@
   </span>
 </div>
 
-<!-- <a ng-click="hideRibbon = false" ng-show="hideRibbon" class="mini-ribbon">
+<!-- <a data-ng-click="hideRibbon = false" data-ng-show="hideRibbon" class="mini-ribbon">
   <i class="fa fa-arrow-right"></i>
 </a>
